# CrawlingThat

./: .gitignore  Delete_List.csv  Deny_List.csv  LUA 분석.xlsx  LUA_DAMAGE_TEMPLET.txt  LUAsheet.xlsx  NKM_UNIT_BARCODE_C_SISTER.txt  NKM_UNIT_CA_JOO_SHI_YOON.txt  Noun_Filter.csv  Search_List.csv  Search_List_bak.csv  TEST1.csv  arca.py  check_lua.py  fragments.py  main.py  pyproject.toml  save.py  temp.csv  test.csv  z_dc_inside.py  오류!.txt  크롤링.xlsx
results/: All_result.csv  각미나각등.csv  각시윤.csv  각힐.csv  각힐힐데.csv  격전.csv  기계|기순|기집.csv  기계기순.csv  라라.csv  루시드.csv  버그.csv  세리나.csv  시그마.csv  언팩.csv  에이미.csv  오로치.csv  이볼브.csv  패키지.csv  호라이호라이즌깡우각우각호.csv
results/Daily_Results/: 20211211.csv  20211212.csv  20211213.csv  20211214.csv  20211215.csv  20211216.csv  20211217.csv  20211218.csv  20211219.csv  20211220.csv  20211221.csv  20211222.csv  20211223.csv  20211224.csv  20211225.csv  20211226.csv  20211227.csv  20211228.csv  20211229.csv  20211230.csv  20211231.csv  20220101.csv  20220102.csv  20220103.csv  20220104.csv  20220105.csv  20220106.csv  20220107.csv  20220108.csv  20220109.csv  20220110.csv  20220111.csv  20220112.csv  20220113.csv  20220114.csv  20220115.csv  20220116.csv  20220120.csv  20220121.csv  각미나각등.csv  (+1 more)
results/Daily_Results_Count/: 20211211.csv  20211212.csv  20211213.csv  20211214.csv  20211215.csv  20211216.csv  20211217.csv  20211218.csv  20211219.csv  20211220.csv  20211221.csv  20211222.csv  20211223.csv  20211224.csv  20211225.csv  20211226.csv  20211227.csv  20211228.csv  20211229.csv  각미나각등.csv  (+23 more)
templates/: Repeat.html  Result.html  Search.html
