[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mindlessacceptablelaboratory"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
python = "^3.8"
requests = "^2.23"
Flask = "^1.1"
arca = "^0.3.3"
pandas = "^1.3.1"
[tool.poetry.dev-dependencies]
